--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js">
-        
-    </script>
+    <h1>Java Script Tutorial</h1>
+    <script src="index.js"></script>
 </body>
 </html>
