--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Java Script Tutorial</h1>
-    <script src="index.js"></script>
+    <script src="hoisting.js"></script>
 </body>
 </html>
