--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Java Script Tutorial</h1>
-    <script src="hoisting.js"></script>
+    <div class="wrapper">
+        <p id="paragraph">Hello Programmers</p>
+        <h1 class="jst">Welcome to Java Script Tutorial!</h1>
+        <p class="jst">find your passion into CODING</p>
+        <a class="jst" href="http://www.youtube.com/" target="_blank">Go to Youtube</a>
+    </div>
+    <button class="btn" >click here</button>
+    <div class="event">
+        <ul>
+            <li>a</li>
+            <li>b</li>
+            <li>c</li>
+        </ul>
+    </div>  
+    <button class="btn2" >create list</button>
+    <script src="dom.js"></script>
 </body>
 </html>
