--- a/assignments/index.html
+++ b/assignments/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="dataTypes.js"></script>
+    <script src="Funcs.js"></script>
 </body>
 </html>
