modified files upto 7dom

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </ul>
     </div>  
     <button class="btn2" >create list</button>
-    <script src="dom.js"></script>
+    <script src="7dom.js"></script>
 </body>
 </html>
