upto localstorage (completed)

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             <li>b</li>
             <li>c</li>
         </ul>
-    </div>  
+    </div>
+
     <button class="btn2" >create list</button>
-    <script src="7dom.js"></script>
+    <div id="clock">
+         
+    </div>
+    <script src="14ES6features.js"></script>
 </body>
 </html>
